# cli-session-log

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: current-task.json
cli_session_log/: __init__.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py  session.py
cli_session_log/extractors/: __init__.py  base.py  claude.py  gemini.py
hooks/: README.md  claude_session_hook.py  zshrc_example.sh
tests/: __init__.py  test_cli.py  test_config.py  test_extractors.py  test_hooks.py  test_session.py
